syntax = "proto3";

package users;
option go_package = "/userspb";

message User {
    string user_name = 1 ;
    string password = 2 ;
}

message SignUp {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string user_name = 4 ;
    string password = 5 ;
}

message UserRequest {
    User user = 1;
}

message UserResponse {
    string result = 1;
}

message SignUpRequest {
    SignUp user = 1;
}

message SignUpResponse {
    string result = 1;
}

service UserService {
    rpc Login(UserRequest) returns (UserResponse) {};
    rpc SignUp(SignUpRequest) returns (SignUpResponse) {};
    rpc Delete(UserRequest) returns (UserResponse) {};
}

